--- a/large_flask_application/my_project/templates/base.html
+++ b/large_flask_application/my_project/templates/base.html
@@ -15,10 +15,10 @@
 
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
-      <a class="nav-item nav-link" href="{{ url_for('add_pup') }}">Add Pup</a>
-      <a class="nav-item nav-link" href="{{ url_for('list_pup') }}">List of Pups</a>
-      <a class="nav-item nav-link" href="{{ url_for('del_pup') }}">Delete Pup</a>
-      <a class="nav-item nav-link" href="{{ url_for('add_owner') }}">Add Owner</a>
+      <a class="nav-item nav-link" href="{{ url_for('puppies.add') }}">Add Pup</a>
+      <a class="nav-item nav-link" href="{{ url_for('puppies.list') }}">List of Pups</a>
+      <a class="nav-item nav-link" href="{{ url_for('puppies.delete') }}">Delete Pup</a>
+      <a class="nav-item nav-link" href="{{ url_for('owner.add') }}">Add Owner</a>
 
     </div>
 
